Fix: Toggle Width
Fixed the issue where the toggle switch would shrink when the label was too large.

--- a/public/popup.css
+++ b/public/popup.css
@@ -84,7 +84,7 @@ label {
 .switch {
   position: relative;
   display: inline-block;
-  width: 50px;
+  min-width: 50px;
   height: 30px;
   outline: none;
 }
